[metadata]
name = ttrss
author = eikendev
author_email = raphael@eiken.dev
license = MIT
keywords = ttrss, feed, rss, atom, cli
description = A tool for accessing a ttrss instance.
long_description = file: README.rst
url = https://pypi.python.org/pypi/ttrss
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Utilities
    Environment :: Console
    Operating System :: POSIX

[options]
python_requires = >=3
install_requires =
    keyring; python_version >= "13.0.0"
    requests; python_version >= "2.0.0"
setup_requires =
    setuptools_scm; python_version >= "1.15.7"
